# HF-IGsL

./: .gitignore  .gitmodules  BRINGUP-TURTLEBOT3-ROBOT.bash  BUILD-DOCKER-IMAGE.bash  CONTRIBUTING.md  INCL-SUDO-ENV.bash  INCL-USER-ENV.bash  LICENSE  README.md  RSSM_node.py  RUN-DOCKER-CONTAINER.bash  RUN-TERMINATOR-TERMINAL.bash  collect_dataset.md  experiment_procedure.md  frames.gv  manage_experiments.bash  reset-SpCoSLAM-outputspace.sh  setup_env.md  start_experiment.bash
Multimodal-RSSM/: README.md
catkin_ws/src/rgiro_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_akozlin_shelf/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_akozlin_shelf/meshes/: rgiro_akozlin_shelf.dae
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_akozlin_shelf/sources/: rgiro_akozlin_shelf.f3d
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_astro_laundry_bag/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_astro_laundry_bag/meshes/: rgiro_astro_laundry_bag.dae
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_demo_floor_home/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_demo_floor_inside/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_demo_floor_outside/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_generic_refrigerator/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_haitian_magazine_rack/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_quickcamp_table/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_sanwa_partition/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_yamazen_sofa_double/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/models/rgiro_yamazen_sofa_single/: model.config  model.sdf
catkin_ws/src/rgiro_gazebo_worlds/worlds/: rgiro_mobile_demo.world
catkin_ws/src/rgiro_spco2/rgiro_spco2_slam/: README.md  package.xml
catkin_ws/src/rgiro_spco2/rgiro_spco2_slam/src/: spco2_image_features.py  spco2_word_features.py
catkin_ws/src/rgiro_spco2/rgiro_spco2_utils/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/rgiro_spco2/rgiro_spco2_utils/launch/: rgiro_spco2_utils_test.launch  rjiro_spco2_utils_test.launch
catkin_ws/src/rgiro_spco2/rgiro_spco2_utils/src/: JuliusLattice_dec.py  __init__.py  image_feature_server.py  learnSpCoSLAM2.0.py  listener.py  map_saver.py  run_SpCoSLAM2.0.py  run_placesCNN_unified.py  run_rosbag.py  saveSpCoMAP_online.rviz  talker.py
catkin_ws/src/rulo_chatter/: CMakeLists.txt  README.md
catkin_ws/src/rulo_chatter/launch/: rulo_chatter_default.launch  rulo_chatter_rosbridge.launch  rulo_chatter_rqt.launch
catkin_ws/src/rulo_chatter/src/: rulo_chatter.html
catkin_ws/src/sde_launch/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/sde_launch/config/rviz/: turtlebot3_robot_rviz_multi.rviz  turtlebot3_simulation_rviz_default.rviz
catkin_ws/src/sde_launch/launch/: darknet_ros_default.launch  serket_ros_navigation_default.launch  serket_ros_robot_categorization_default.launch  turtlebot3_gazebo_default.launch  turtlebot3_robot_bringup_multi.launch  turtlebot3_robot_rviz_multi.launch  turtlebot3_simulation_gazebo_default.launch  turtlebot3_simulation_gazebo_multi.launch  turtlebot3_simulation_rviz_default.launch  turtlebot3_simulation_rviz_multi.launch
catkin_ws/src/sdewg_chatter/: package.xml
catkin_ws/src/sdewg_chatter/src/: sdewg_chatter.html  sdewg_listener.cpp  sdewg_talker.cpp
catkin_ws/src/serket_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
catkin_ws/src/serket_ros/launch/: auto_scenario_play_gazebo.launch  image_categorization.launch  place_categorization.launch  serket_thread.launch  waypoint_navigation.launch  waypoint_navigation_2D_Nav_Goal.launch
catkin_ws/src/serket_ros/nodes/: auto_scenario_play_gazebo.py  image_categorization.py  image_feature.py  image_publisher.py  place_categorization.py  serket_thread.py  waypoint_navigation.py  waypoint_navigation_2D_Nav_Goal.py  word_publisher.py
catkin_ws/src/serket_ros/scripts/: matplotlib_example.py  serket_example.py  serket_example_1.py  serket_example_2.py  serket_example_3.py
catkin_ws/src/serket_ros/sentences/: aws_robomaker_world_sentences.csv
catkin_ws/src/serket_ros/waypoints/: Hospital_waypoints_in_gazebo.csv  Small_house_waypoints_in_gazebo .csv  aws_robomaker_bookstore_world.csv  aws_robomaker_small_house_world.csv  aws_robomaker_small_warehouse_world.csv
dataset/: reshape_rosbag.bash
(+827 files in other folders)
