<?xml version="1.0"?>
<package format="2">
  <name>sde_launch</name>
  <version>1.0.0</version>
  <description>The 'sde_launch' package coordinates the robot tasks and behaviors across all packages using shared launch files.</description>

  <maintainer email="lotfi.elhafi@gmail.com">Lotfi El Hafi</maintainer>
  <license>MIT</license>
  <url type="website">https://gitlab.com/emlab/TurtleBot3</url>
  <author email="lotfi.elhafi@gmail.com">Lotfi El Hafi</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
